--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -257,6 +257,31 @@ header{
 			float: left;
 			width: 320px;
 			margin-top: 40px;
+			.input-group{
+				position: relative;
+				#ss_uo{
+					position: absolute;
+					left: 0;
+					top: 35px;
+					z-index: 9999;
+					cursor: pointer;
+					background: #fff;
+					height: 10px;
+					width: 313px;
+					li{
+						text-indent: 10px;
+					    line-height: 30px;
+					    background: #fff;
+					    font-size: 12px;
+					    color: #999;
+					    &:hover{
+					    	background: rgba(0,0,0, .8);
+					    	color:#fff;
+					    }
+					}
+				}
+			}
+			
 			.input-group-cont{
 				width: 225px;
 				height: 20px;
