项目第四天（下）

--- a/src/sass/cart.scss
+++ b/src/sass/cart.scss
@@ -1,3 +1,241 @@
 @charset "UTF-8";
 @import 'common';
 
+.cart_panel{
+	width: 990px;
+	margin: 0 auto;
+	.cart{
+		text-align: center;
+        position: relative;
+        img{
+            vertical-align: middle;
+        }
+        .cue{
+        	a{
+        		background: #ff5500;
+        	    position: absolute;
+			    left: 479px;
+			    top: 105px;
+			    color: #fff;
+			    background: #f60;
+			    display: inline-block;
+			    padding: 3px 10px 3px 13px;
+			    border-radius: 6px;
+        	}
+        }
+	}
+	.panel_add{
+		border: 1px solid #d9d9d9;
+		margin-bottom: 20px;
+		.cart_head{
+			padding: 0 20px;
+			background: #ebebeb;
+			.order_title{
+				&::after{
+					content: "";
+					display: block;
+					height: 0;
+					clear: both;
+					overflow: hidden;
+					visibility: hidden;
+				}
+				li{
+				    font-weight: bold;
+				    display: inline-block;
+				    float: left;
+				    padding: 10px 0;
+				    color: #737373;
+				    font-size: 14px;
+				}
+				.selecter{
+					width: 28px;
+				}
+				.product{
+					width: 400px;
+				}
+				.market_price,.order_price,.num,.operate{
+					width: 130px;
+					text-align: center;
+				}
+			}
+		}
+		.cart_body{
+			width: 100%;
+			.body_list{
+				padding: 15px 0;
+				&::after{
+					content: "";
+					display: table;
+					height: 0;
+					clear: both;
+					overflow: hidden;
+					visibility: hidden;
+				}
+				li{
+					display: inline-block;
+					line-height: 20px;
+					float: left;
+				}
+				.selecter{
+					width: 48px;
+					height: 56px;
+					text-align: center;
+					.i_btn{
+						display: inline-block;
+						width: 24px;
+						height: 24px;
+						background: url(../images/checkboxDafault@2x.png) no-repeat;
+						background-size: contain;
+						margin-top: 16px;
+					}
+				}
+				.img_box{
+					width: 70px;
+					img{
+						width: 50px;
+						height: 56px;
+						vertical-align: middle;
+					}
+				}
+				.product{
+					font-size: 12px;
+					width: 330px;
+					padding: 8px 0;
+					a{
+						&:hover{
+							color: #ff6a00;
+							text-decoration: underline;
+						}
+					}
+				}
+				.market_price,.order_price,.num{
+					line-height: 55px;
+					width: 130px;
+					text-align: center;
+					color: #737373;
+					font-size: 12px;
+					.price_num{
+						text-decoration: line-through;
+					}
+				}
+				.order_price{
+					color: #ff6a00;
+					font-weight: 600;
+					.price_num{
+						text-decoration: none;
+					}
+				}
+				.num{
+					.form_control{
+						display: inline-block;
+					    width: 40px;
+					    height: 24px;
+					    border: 1px solid #d9d9d9;
+					    border-color: #d9d9d9; 
+					    text-align: center;
+					    color: #737373;
+					    &:hover{
+					    	border-color: #999;
+					    }
+					    outline: none;
+					    box-shadow: none;
+					}
+					.btn{
+						display: inline-block;
+						width: 11px;
+						height: 11px;
+						border: 1px solid #d9d9d9;
+						vertical-align: middle;
+					}
+					.ico{
+						display: inline-block;
+						width: 9px;
+						height: 9px;
+						vertical-align: top;
+						margin-top: 1px;
+					}
+					.ico_minus{
+						background: url(../images/common_z.png) no-repeat -274px -234px;
+					}
+					.ico_add{
+						background: url(../images/common_z.png) no-repeat -396px -239px;
+					}
+					.no{
+						opacity: .4;
+						filter: alpha(opacity=40);
+					}
+				}
+				.operate{
+					font-size: 12px;
+					padding: 8px 0 8px 40px;
+					a{
+						display: inline-block;
+						&:hover{
+							color: #ff6a00;
+							text-decoration: underline;
+						}
+					}
+				}
+			}
+		}
+	}
+	.Choice{
+		width: 100%;
+		margin-bottom: 30px;
+		&::after{
+			content: "";
+			display: block;
+			height: 0;
+			clear: both;
+			overflow: hidden;
+			visibility: hidden;
+		}
+		.Choice_left{
+			font-size: 12px;
+			color: #737373;
+			width: 829px;
+			border: 1px solid #d9d9d9;
+			border-right: none;
+			padding: 0 20px;
+			line-height: 50px;
+			float: left;
+			.go{
+				display: inline-block;
+				width: 22px;
+				height: 22px;
+				background: url(../images/common_z.png) no-repeat -68px -318px;
+				vertical-align: middle;
+				margin-top: -2px;
+				margin-right: 3px;
+			}
+			.Continue{
+				&:hover{
+					color: #ff6a00;
+					text-decoration: underline;
+				}
+			}
+			.money{
+				float: right;
+				span{
+					display: inline-block;
+					color: #ff6a00;
+					font-weight: 800;
+					font-size: 16px;
+					vertical-align: middle;
+					margin-top: -2px;
+				}
+			}
+		}
+		.Choice_right{
+			float: right;
+			padding: 14px 32px;
+			font-size: 18px;
+			font-weight: bold;
+			color: #fff;
+			border: 1px solid #ff6a00;
+			border-bottom: none;
+			background: #ff6a00;
+		}
+	}
+	
+}
