项目第四天（下下）

--- a/src/sass/detail.scss
+++ b/src/sass/detail.scss
@@ -383,6 +383,7 @@
                a{
                   line-height: 35px;
                   background: #fff;
+                  outline:none;
                }
             }
         }
