--- a/src/sass/entry.scss
+++ b/src/sass/entry.scss
@@ -1,119 +1,52 @@
 @import 'common';
 .main_bg{
     width: 100%;
-    background: url('../images/entry_bg.jpg')10%;
+    background: url('../images/entry_bg.jpg') no-repeat 50%;
     .main_1{
         height: 600px;
         width: 990px;
         margin:0 auto;
         position: relative;
         .right-box{
+            font-size: 14px;
             height: 368px;
             width: 380px;
             position: absolute;
             right: 0;
-            bottom: 40px;
-            background: #fff;
-            padding: 20px;
-            .rex{
-                .top-ul{
-                    height: 40.4px;
-                    line-height: 40.4px;
-                    margin-bottom: 15px; 
-                    border-bottom: 2px solid #d9d9d9;
-                    a{
-                        height: 100%;
-                        display: inline-block;
-                        text-align: center;
-                        font-weight: bold;
-                        font-size: 17px;
-                        width: 104px;
-                    } 
-                    .on{
-                        color: #ff6a00;
-                        border-bottom: 2px solid #ff6a00;
-                    } 
-                }
-                .box{
-                    margin: 0 30px;
-                }
-                .link{
-                    margin-top: 20px;
-                }
-                .box_down{
-                    color: #737373;
-                    font-size: 12px;
-                    padding: 0 5px 0 4px;
-                }
-                .down{
-                    display: inline-block;
-                    height: 14px;
-                    overflow: hidden;
-                    color: #ccc;
-                    padding: 0 5px;
-                    vertical-align: middle;
-                    margin-top: -2px;
-                    color: #737373;
-                }
-                .box1{
-                    margin-bottom: 15px;
-                }
-                .right{
-                    text-align: right;
-                    height:20px;
-                    line-height: 20px;
-                    .red-color{
-                        color: #ff6a00;
-                        font-size: 12px;
-                    }
-                }
-                .center{
-                    box-sizing: border-box;
-                    height: 40px;
-                    line-height: 40px;
-                    border: 1px solid #d9d9d9;
-                    margin-bottom: 10px;
-                    div{
-                        float: left;
-                        height: 100%;
-                        width: 36.8px;
-                        line-height: 38px;
-                        text-align: center;
-                        border-right: 1px solid #d9d9d9;
-                        background: #eee;
-                        span{
-                            width: 16px;
-                            height: 16px;
-                            display: inline-block;
-                        }
-                        .user-pic{
-                            background: url('../images/common_z.png') -338px -318px no-repeat;
-                        }
-                        .pasd-pic{
-                            background: url('../images/common_z.png') -312px -318px no-repeat;
-                        }
-                    }
-                    input{
-                        height: 100%;
-                        float: left;
-                        border: 0;
-                        padding-left: 10px;
-                        font-size: 12px;
-                        outline: none;
-                    }
-                }
-                .last a{
-                    margin-top: 10px;
-                    display: block;
-                    background: #ff6a00;
-                    height: 40px;
-                    line-height: 40px;
-                    font-size: 20px;
-                    text-align: center;
-                    color: #fff;
-                    font-weight: bold;
+            top: 20px;
+            background: rgba(255,255,255,0.4);
+
+        form{
+            padding: 30px 20px 0 20px;
+        }
+        #txt,#psw,#num,#emil{
+            border:1px solid transparent;
+            width: 290px;
+            height: 30px;
+            outline: none;
+            box-shadow: 5px 5px 5px #ccc;
+            box-sizing: border-box;
+        }
+        .box1,.box2,.box3,.box4{
+            width: 350px;
+            height: 50px;
+            color: #333;
+        }
+        div{
+            padding-top:20px; 
+        }
+        button{
+            width:80px;
+            height: 40px;
+            margin: 20% 33%;
+            background: skyblue;
+            outline: none;
+            border:1px solid transparent;
+            cursor: pointer;
+                &:hover{
+                background: pink;
                 }
             }
-        }
+       }
     }
 }
